# claude-radical-red

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  agent.py  battle.py  context.py  emulator.py  eval.py  memory.py  party.py  pyproject.toml  radicalred.sav  save_state.ss0  team.py  video.py
agents/: README.md  __init__.py  hardcoded.py  simple.py
data/: abilities.json  base_stats.json  moves.json  species.json
data/teams/: default.md
docker/: claude-code.Dockerfile  codex.Dockerfile  provider-proxy.Dockerfile  provider-proxy.conf  rrbench-server.Dockerfile
rrbench/: tasks.py  team.py  video.py
rrbench/battle/: addresses.py  capture.py  engine.py  state.py
rrbench/emulator/: memory.py
rrbench/harness/: coding_agent.py  recording.py  runner.py  trial.py
rrbench/interface/: cli.py  protocol.py  server.py  service.py
scripts/: dump_team.py  extract_base_stats.py  extract_moves.py  extract_species.py  install_mgba.sh  setup_codex_auth.sh  setup_docker.sh
tasks/giovanni/: save_state.ss0  task.yaml
tests/: test_capture.py  test_coding_agent.py  test_recording.py  test_runner.py  test_team_updates.py  test_trial.py
